prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/constant_field_not_found.nut
// EXPECT_ERROR: "not found in constant object"
const TBL = {a = 1, b = 2}
const X = TBL.c
